# telegram-stars-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.en.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_user_language.py  0003_referral_and_withdrawals.py  0004_partner_bots.py  0005_user_banned.py  0006_order_message_ref.py
app/: __init__.py  config.py  logging_config.py  main.py  pricing.py  services.py
app/bot/: __init__.py  handlers.py  i18n.py  keyboards.py  middleware.py  states.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/wata/: __init__.py  client.py  errors.py  models.py  signature.py
app/webhook/: __init__.py  server.py
docs/: ECONOMICS.md
scripts/: install.sh  markup_calc.py  update.sh
tests/: test_pricing.py  test_wata_parsing.py
