[project]
name = "telegram-stars-bot"
version = "0.1.0"
description = "Telegram bot for selling Telegram Stars via the WATA Digital Goods API"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # aiogram/pydantic style default-call args

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
